Insertion menu ok
