# app/Models/Menu.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Menu extends Model
+{
+    protected $table = "menu";
+    const CREATED_AT = 'created_on';
+    const UPDATED_AT = 'updated_on';
+
+    protected $fillable = [
+        'id',
+        'title',
+        'subtitle',
+        'description',
+        'display_order',
+        'is_active'
+    ];
+}
